fixing layout issues

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -25,9 +25,19 @@ body {
 			margin: 0;
 		}
 		p {
+			position: sticky;
 			font-size: 1.5rem;
 			margin: 0 0 2.5rem 0;
 			color: #5cb85c;
+		}
+		#sticky {
+			position: -webkit-sticky;
+			position: sticky;
+			bottom: 500px;
+			background-color: transparent;
+			h1 {
+				background-color: transparent;
+			}
 		}
 	}
 }
